--- a/style.css
+++ b/style.css
@@ -130,10 +130,11 @@ input[type="text"] {
     border: 1px solid var(--glass-border);
     padding: 20px; border-radius: 20px;
     color: white; font-size: 1.1rem; font-weight: 600;
-    text-align: start; cursor: pointer; transition: 0.3s;
+    text-align: inherit; cursor: pointer; transition: 0.3s;
     display: flex; justify-content: space-between; align-items: center;
     position: relative; /* ضروري جداً لتموضع الخط */
     overflow: hidden;   /* لقص الخط عند الزوايا المستديرة */
+    flex-direction: row-reverse;
 }
 .subject-btn:after { content: '←'; opacity: 0.5; }
 .subject-btn:hover {
@@ -237,8 +238,9 @@ input[type="text"] {
     background: rgba(255, 255, 255, 0.05);
     border: 1px solid var(--glass-border);
     padding: 18px; border-radius: 16px;
-    color: var(--text-main); text-align: start;
+    color: var(--text-main); text-align: inherit;
     font-size: 1rem; transition: 0.2s; cursor: pointer; font-weight: 600;
+    width: 100%;
 }
 .option-btn:active { transform: scale(0.98); background: rgba(255,255,255,0.1); }
 
